# ipc-channel

./: Cargo.toml
examples/: cs.rs
src/: lib.rs  test.rs
src/platform/: mod.rs  test.rs
src/platform/inprocess/: mod.rs
src/platform/unix/: mod.rs
src/platform/windows/: mod.rs  notes.txt
