[package]
name = "ipc-channel"
version = "0.6.0"
description = "A multiprocess drop-in replacement for Rust channels"
authors = ["The Servo Project Developers"]
license = "MIT/Apache-2.0"
repository = "https://github.com/servo/ipc-channel"

[features]
default = ["win32-trace"]
force-inprocess = []
unstable = []
win32-trace = []

[dependencies]
bincode = "0.6"
lazy_static = "0.2"
libc = "0.2.12"
rand = "0.3"
serde = "0.8"
uuid = {version = "0.3", features = ["v4"]}
fnv = "1.0.3"

[target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies]
mio = "0.6.1"

[dev-dependencies]
crossbeam = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = "0.2"
kernel32-sys = "0.2"
